--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.shopizer</groupId>
 	<artifactId>sm-search</artifactId>
-	<version>2.6.0</version>
+	<version>2.10.0</version>
 	<packaging>jar</packaging>
 	<name>sm-search</name>
-	<description>Search module for shopizer using elasticsearch 5.6.12</description>
+	<description>Search module for shopizer using elasticsearch 7.5.2</description>
 	<url>http://www.shopizer.com</url>
 
 	<properties>
@@ -14,6 +14,7 @@
 		<java-version>1.8</java-version>
 
 		<jackson-version>2.9.9</jackson-version>
+        <jackson-databind-version>2.9.10.1</jackson-databind-version>
 		<gson.version>2.8.2</gson.version>
 		<guava.version>19.0</guava.version>
 		<junit.version>4.12</junit.version>
@@ -23,13 +24,10 @@
 		<commons-lang3-version>3.4</commons-lang3-version>
 		<commons-collections4-version>4.1</commons-collections4-version>
 		<org.slf4j-version>1.7.21</org.slf4j-version>
-		<log4j-version>1.2.17</log4j-version>
-
+		<log4j-version>2.13.0</log4j-version>
 		<org.springframework-version>4.2.1.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
-
-		<org.elasticsearch-version>6.3.1</org.elasticsearch-version>
-		<io.searchbox.jest-version>6.3.1</io.searchbox.jest-version>
+		<org.elasticsearch-version>7.5.2</org.elasticsearch-version>
 
 	</properties>
 
@@ -95,11 +93,11 @@
 			<version>${org.slf4j-version}</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>${log4j-version}</version>
-			<scope>compile</scope>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-core</artifactId>
+		    <version>${log4j-version}</version>
 		</dependency>
 
 		<!-- @Inject -->
@@ -121,7 +119,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson-version}</version>
+			<version>${jackson-databind-version}</version>
 		</dependency>
 
 
@@ -139,19 +137,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-
-
+		
 		<dependency>
-			<groupId>io.searchbox</groupId>
-			<artifactId>jest</artifactId>
-			<version>${io.searchbox.jest-version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.servlet</groupId>
-					<artifactId>servlet-api</artifactId>
-				</exclusion>
-			</exclusions>
+		    <groupId>org.elasticsearch.client</groupId>
+		    <artifactId>elasticsearch-rest-high-level-client</artifactId>
+		    <version>${org.elasticsearch-version}</version>
 		</dependency>
+
 
 		<dependency>
 			<groupId>com.google.guava</groupId>
@@ -238,20 +230,6 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-gpg-plugin</artifactId>
-				<version>1.5</version>
-				<executions>
-					<execution>
-						<id>sign-artifacts</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>sign</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
 				<groupId>org.sonatype.plugins</groupId>
 				<artifactId>nexus-staging-maven-plugin</artifactId>
 				<version>1.6.7</version>
@@ -271,6 +249,20 @@
 						<id>attach-sources</id>
 						<goals>
 							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.5</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
 						</goals>
 					</execution>
 				</executions>
