--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.shopizer</groupId>
 	<artifactId>sm-search</artifactId>
-	<version>2.11.2</version>
+	<version>2.17.0</version>
 	<packaging>jar</packaging>
 	<name>sm-search</name>
 	<description>Search module for shopizer using elasticsearch 7.5.2</description>
@@ -23,7 +23,7 @@
 		<commons-lang3-version>3.4</commons-lang3-version>
 		<commons-collections4-version>4.1</commons-collections4-version>
 		<org.slf4j-version>1.7.21</org.slf4j-version>
-		<log4j-version>2.13.0</log4j-version>
+		<log4j-version>2.15.0</log4j-version>
 		<org.springframework-version>5.2.4.RELEASE</org.springframework-version>
 		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.elasticsearch-version>7.5.2</org.elasticsearch-version>
@@ -40,7 +40,7 @@
 	<developers>
 		<developer>
 			<name>Shopizer Team</name>
-			<email>team@shopizer.com</email>
+			<email>info@shopizer.com</email>
 			<organization>Shopizer</organization>
 			<organizationUrl>http://www.shopizer.com</organizationUrl>
 		</developer>
@@ -74,6 +74,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
